themes/finna2/less/finna-other.less
// finna/common contains mixins used in other files, so import it first
@import "finna/common";
@import "finna/accordion";
@import "finna/advanced-search";
@import "finna/autocomplete";
@import "finna/authority";
@import "finna/collection";
@import "finna/channels";
@import "finna/facets";
@import "finna/date-range";
@import "finna/finna-dateinput.less";
@import "finna/tabs";
@import "finna/image-popup";
@import "finna/finna-header";
@import "finna/combinedlist";
@import "finna/grid-view";
@import "finna/holdings";
@import "finna/public-favorites";
@import "finna/login";
@import "finna/browse";
@import "finna/feed";
@import "finna/content";
@import "finna/condensed-list";
@import "finna/compact-list";
@import "finna/highlight";
@import "finna/home";
@import "finna/map";
@import "finna/location-service";
@import "finna/organisation-info";
@import "finna/survey";
@import "finna/terms-of-service";
@import "finna/search";
@import "finna/searchbox";
@import "finna/browsebar";
@import "finna/forms";
@import "finna/search-controls";
@import "finna/result-sidebar";
@import "finna/library-cards";
@import "finna/tooltip";
@import "finna/street-search";
@import "finna/navigation";
@import "finna/myresearch";
@import "finna/mylist";
@import "finna/ontology";
@import "finna/profile";
@import "finna/page-selectors";
@import "finna/feedback";
@import "finna/headings";
@import "finna/footer";
@import "finna/modal";
@import "finna/button-groups";
@import "finna/video-player";
@import "finna/record";
@import "finna/primo";
@import "finna/filters";
@import "finna/mobile-toolbar";
@import "finna/mobile-table";
@import "finna/audio-player";
@import "finna/feed-styles.less";
@import "finna/external-data.less";
@import "finna/labels.less";
@import "finna/finna-suggestions.less";
@import "finna/embedded-content.less";
@import "finna/wayfinder.less";
@import "finna/select-a11y.less";

::-ms-clear {
    display: none;
}

iframe {
    border: none;
}
header {
     background: @header-background-color;
}
// Body without background image (Quick fix!)
body {
    background-image: none !important;
}
body {
    display: flex;
    flex-flow: column;
    min-height: 100vh;
    section.main {
        flex: 1;
    }
}
section.main.template-dir-search.template-name-results,
section.main.template-dir-primo.template-name-search,
section.main.template-dir-eds.template-name-search,
section.main.template-dir-authority.template-name-search,
section.main.template-dir-feedback.template-name-response {
    & >.container.main-content {
        margin-top: 10px;
        padding-bottom: 25px;
        @media(max-width: @screen-xs-max) {
            margin-top: 0px;
          }
    }
    & .resultItemFormat {
        margin: 3px 0px;
    }
}

section.main.template-dir-content.template-name-content > .container,
section.main.template-dir-feedcontent.template-name-content > .container {
  padding-top: 0;
  padding-bottom: 3.4em;
}
.record-row {
    margin-top: 20px;
}

.document-types {
    li {
        font-size: 1em;
        margin-bottom: 10px;
    }
    & a {
        line-height: 1.3em;
    }
    & a.iconlabel {
        color: @link-color;
        &:before {
            color: @text-color;
        }
        &:hover {
                text-decoration: none;
        }
    }
}

i.fa.fa-search.backgrounding {
    position: absolute;
    right: 30px;
    top: 30px;
}
i.fa.fa-search.backgrounding:before {
    font-size: 100px;
    color: rgba(255,255,255,0.5);
}

.modal-body.in {
    /* These combat the bootstrap weirdness with trying to compensate for scrollbars */
    padding-left: 20px !important;
    padding-right: 20px !important;
}
/* Input styles */
input[type=number].input-year {
    -moz-appearance:textfield;
    width: 5em;
}
input[type=number].input-year::-webkit-inner-spin-button,
input[type=number].input-year::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

/* --- Image processing --- */

.group [class^=col-] {padding-left:0}
.highlight{&:extend(mark);}
.icon-bar {background-color:#888}
img {max-width:100%}
label.list-group-item {border-radius:0;font-weight:normal;margin-top:0;padding-left:35px}
.list-group-item.title {font-weight:bold}
.tab-content {padding:4px 0px}

/* --- Collection view --- */
.template-dir-collection.template-name-view {
    & .collection-title {
        margin-top: 0;
    }
    & .list-group.filters {
        & input {
            max-width: 100%;
            @media (min-width: @screen-sm-min) and (max-width: @screen-md-max) {
                width: 100%;
                margin-bottom: 5px;
            }
            @media (max-width: @screen-xs-max) {
                display: inline-block;
            }
        }
    }
}

/* --- Badges - blend the links in --- */
.badge a {
    color: #fff;
    border-radius: 50%;
    padding: 2px 3px;
    background: @gray-light;
}

/* --- OpenURLs --- */
.template-dir-combined, #search-tabs-recommendations-holder, .local-available-online-record {
    .openurls.more-options {
        &:extend(.hidden);
    }
}
.openUrlControls.openUrlEmbed {
    display: block;
    visibility: hidden;
}
.openurls {
    margin-top: 5px;
    & .coverage {
        font-size: 0.9em;
        color: @gray-light;
    }
}

/* --- DOIs --- */
.doiLink {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}

/* --- Slider accessibility --- */
.slider {
  .slider-track {
    background: @gray-lighter;
    box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.4);

    .slider-selection {
      background: @link-color;
      box-shadow:inset 0 -1px 0 rgba(0,0,0,0.3);
    }
  }
  .slider-handle {
    background: @brand-primary;
    background-image:none;
    border:1px solid @gray-light;
    box-shadow:none;
    background: #fff;
    box-shadow: 0px 0px 10px -4px grey inset, 0px 2px 8px -4px black;
    border-radius: 50%;
    .opacity(1);
    &:hover,&:active,&:focus {
      background:#FFF;
      border-color: @gray-light;
    }
  }
  & .tooltip .tooltip-inner {
    min-width: 10px;
  }
}

/* --- Table wrapping to prevent horizontal overflow --- */
.table {word-wrap:break-word;}

/* --- Visualization View --- */
.node {
  border:1px solid white;
  box-sizing:content-box;
  font: 10px sans-serif;
  line-height: 12px;
  overflow: hidden;
  position: absolute;
  margin:-1px;
}
.node div {
  margin-top: 0px;
}
.toplevel {
  border: 2px solid black;
}
.node .label {
  background:rgba(0,0,0,.5);
  border-radius:0;
  font-size:85%;
  position: absolute;
  bottom: 0;
  left: 0;
  text-shadow:none;
  min-height:1px;
  padding:2px 4px;
}
.notalabel {
  color: #000000;
}
#viz-instructions {
  padding-top:600px;
}

//Finna mixins
.truncate-field {
    overflow: hidden;
    display: none;
    &.truncate-done {
        display: block;
    }
    &.summary,
    & > :last-child {
        margin-bottom: 0;
    }
}
.more-link, .less-link, .less-link-top {
    cursor: pointer;
    font-weight: 600;
    text-transform: uppercase;
    font-size: 0.9em;
    margin-top: 5px;
    margin-bottom: 5px;
    border: none;
    background-color: transparent;
    padding: 0;
    &.link-buttons {
        color: @link-color;
        font-weight: 400;
    }
}

// ipad ios 6 fix
 .ipad-six {
    & header, .nav-tabs, .search-controls, nav, .mylist-functions {
        position: relative;
    }
    & header {
        z-index: 4;
    }
    & .nav {
        z-index: 3;
    }
    & .nav-tabs, .template-dir-myresearch .search-controls {
        z-index: 2;
    }
    & .search-controls, .mylist-functions {
        z-index: 1;
    }
    & .tooltip-facet {
        position: absolute;
    }

}

.content-404 {
    padding-top: 20px;
    padding-bottom: 20px;
    & .links-404 {
        margin-top: 10px;
        & li {
            font-size: 1.1em;
        }
    }
}

// External Authentication
.main.template-dir-externalauth {
    & .external-content-access {
        margin-top: 20px;
        margin-bottom: 20px;

        & .unauthorized-description {
            margin-bottom: 20px;
        }
    }
}

.well {
    background-color: mix(@body-bg, contrast(@body-bg), 95%);
    border: 1px solid mix(@body-bg, contrast(@body-bg), 85%);
}

// Virtual keyboard
@media (min-width: 401px) {
    .simple-keyboard.show-keyboard {
        display: block;
    }
}

.keyboard-selection {
    margin-top: 0;
}

#keyboard-selection-button {
    height: 48px;
}

/* ------ Responsive table for small screen size ------ */
@media screen and (max-width: 768px) {
  .table-responsive {
    border: none;
    thead, tfoot > tr > th {
      position: absolute;
      width: 1px;
      height: 1px;
      margin: -1px;
      padding: 0;
      overflow: hidden;
      clip: rect(0, 0, 0, 0);
      border: 0;
    }
    tbody > tr {
      display: block;
      margin-bottom: @line-height-computed;
      border: 1px solid @gray-lighter;
    }
    td, tbody > tr > th {
      display: flex;
      align-items: first baseline;
      background: #fff;
      &:not(.user-account-table-select):before {
        display: flex;
        flex-basis: 40%;
        flex-shrink: 0;
        font-weight: bold;
        content: attr(data-label);
      }
    }
    tbody > tr > td:nth-child(even) {
      background-color: @table-bg-accent;
    }
    tfoot > tr > td {
      border-top: none;
    }
  }
}

// Inverse of .table-striped
.finna-table-striped {
  > tbody > tr:nth-of-type(even) {
    background-color: @table-bg-accent;
  }
}

// Hierarchy tree
.hierarchy-tree-container .hierarchy-tree-search-form {
    .collection-list-controls;
    flex-direction: row;
    width: 250px;
    margin: 0;
    align-items: normal;
    gap: 0;
    .search-query {
        height: 40px;
        border-right: none;
        border-radius: 4px 0 0 4px;
    }
    .js-load-indicator {
        margin: 10px;
    }
    button.btn-primary {
        width: auto;
        padding: 0 10px;
        font-size: @font-size-base;
        font-weight: @btn-font-weight;
        border-radius: 0 4px 4px 0;
    }
}
.hierarchy-tree__item-container .icon {
    display: none;
}
.hierarchy-tree-container div.alert {
    margin-top: 10px;
}
.hierarchy-tree .hierarchy-tree__search-match > .hierarchy-tree__item-container > a {
    color: @link-color;
}
.collection-hierarchytree {
    .tree-panel {
        padding: 0 15px 0 0;
    }
    #tree-preview {
        padding: 0;
        & > a {
            .btn;
            .btn-primary;
            margin-bottom: 15px;
        }
    }
}

// Collection hierarchy tree width
/*.collection-hierarchytree {
    display: block;
}*/

//  Visually hidden skip links
a.skip-link {
    position: absolute;
    z-index: @zindex-skip-link;
    padding: 4px;
    top: 0;
    left: 0;
    background: @skip-link-background-color;
    color: @skip-link-color;
    &:not(:focus):not(:active) {
        clip: rect(0 0 0 0);
        clip-path: inset(50%);
        height: 1px;
        overflow: hidden;
        position: absolute;
        white-space: nowrap;
        width: 1px;
    }
}

